<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MonTpPorte</string>
    <string name="action_settings">Settings</string>
    <string name="action_gestiondonnees">Gestion des donnÃ©es</string>
    <string name="app_version">1.0</string>
    <string name="station">Station : </string>
    <string name="action_info">Info</string>
    <string name="station_btndemarrer">Démarrer</string>
    <string name="sation_btnterminer">Terminer</string>
    <string name="ok">OK</string>
    <string name="delete">Supprimer</string>
    
    
    <string-array name="nav_drawer_items">
         <item>Utilisateur</item>
         <item>Commande</item>
         <item>Station</item>
    </string-array>
    
    <string name="choicemat">Choisissez votre produit :</string>
    <string name="porte">Porte</string>
    <string name="fenetre">fenêtre</string>
    <string name="nbproduct">Combien en commandez-vous ?</string>
    <string name="material">Type de matériaux :</string>
    <string name="acier">acier</string>
    <string name="bois">bois</string>
    <string name="pvc">PVC</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Close navigation drawer</string>
    <string name="connexion_login">Saisir identifiant</string>
    <string name="connexion_pwd">Saisir mot de passe</string>
    <string name="spinner_main">Choisir votre station</string>
    <string name="adduser">Ajouter utilisateur</string>
    <string name="deleteUser">Supprimer Utilisateur</string>
    <string name="addstation">Ajouter une station</string>
    <string name="addcommand">Ajouter une commande</string>
    <string name="title_activity_gestion_user">Gestion des données</string>
    <string name="action_search">Search</string>
    <string name="idclient">Saissiez votre numéro de client</string>
    <string name="namestation">Entrez le nom de votre station :</string>
    <string name="numbertampon">Valeur du tampon</string>
    <string name="zone">Zone destination</string>
    <string name="title_activity_gestion_command">Gestion des commandes</string>
    <string name="title_activity_gestion_station">Gestion des stationsy</string>
    <string name="idclient">Saissiez votre numÃ©ro de client</string>
    <string name="namestation">Entrez le nom de votre station :</string>
    <string name="numbertampon">Valeur du tampon</string>
    <string name="zone">Zone destination</string>
</resources>